--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -229,8 +229,10 @@ The direction of a vector can be written as a unit vector by dividing the vector
 <Image src='/Statics/VectorsScalarsFigures/UnitVec.jpg' width='4'></Image>
 
 <p>
-Alternatively, the vector components can be determined geometrically via the angles of each component with respect to the Cartesian coordinates. 
+Alternatively, the vector components can be determined geometrically via the angles of each component with respect to the Cartesian Axes. 
 </p>
+
+<!-- There's a picture from the Overleaf document that needs to get inserted here - it's figure 7 in the 210 Overleaf File -->
 
 </SubSection>
 
@@ -532,6 +534,18 @@ Alternatively, the vector components can be determined geometrically via the ang
     similar derivation.
   </p>
 </DisplayEquation>
+</SubSubSubSection>
+
+<SubSubSubSection title="Calculating the cross product">
+
+<p>
+    The cross products of 3D vectors can be calculated by taking the determinant of specific components of the two vectors. It's best to start by writing a 3x3 matrix with the  \\hat{\\imath}, \\hat{\\i=jmath}, and \\hat{\\kmath} vectors in the first row and the two vectors you are taking the cross product of in the next two rows. 
+
+    See the example below of the cross product between \\vec{A} and \\vec{B}: 
+</p>
+
+<!-- There's a picture from the Overleaf document that needs to get inserted here - it's figure 8 in the 210 Overleaf File -->
+
 </SubSubSubSection>
 
 <SubSubSection title="Vector Projection">
