--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -893,9 +893,9 @@ import DisplayTable from "../../components/DisplayTable.astro"
         </p>
           <ol>
              <li> Scalar variables: (<InlineEquation equation="\\vec{\\omega}_z , \\vec{\\alpha}_z" />) </li>
-             <li> Expand vector equations: <DisplayEquation equation=" \\begin{aligned} \\vec{a} = \\vect{\\alpha}_z \\vec{r} - \\vec{\\omega}_z^2 \\vec{r} \\\\  &   (-4, -3) = \\alpha_z (1,2) - \\omega_z^2 (2,-1) \\\\   &   \\hat\\imath : -4 = 1 \\alpha_z -2 \\omega_z^2 \\\\   &   \\left(\\hat\\jmath : -3 = 2 \\alpha_z + \\omega_z^2 \\right) \\\\  \\end{aligned}" /> </li>
-             <li> Solve scalar equations (substitution): <DisplayEquation equation=" \\begin{aligned} \\hat\\jmath : \\omega_z^2 = -3 -2 \\alpha_z \\\\  &   \\hat\\imath : -4 = \\alpha_z - 2(-3-2\\alpha_z) \\\\   &   \\hat\\imath : -4 = 5 \\alpha_z +6 \\\\   &   \\alpha_z = -2 \\\\ & \\omega_z^2 = -3 -2 (-2) = 1 \\\\   &   \\omega_z = \pm 1 \\\\ \\end{aligned}" /> </li>
-             <li> Reconstruct vector variables: <DisplayEquation equation=" \\begin{aligned} \\vec\\omega = \pm \\hat{k}  rad/s  \\\\  &   \\vec\\alpha  = -2 \\hat{k} rad/s^2 \\\\    \\end{aligned}" /> </li>
+             <li> Expand vector equations: <DisplayEquation equation=" \\begin{aligned} \\vec{a} = \\vec{\\alpha}_z \\vec{r} - \\vec{\\omega}_z^2 \\vec{r} \\\\  &   (-4, -3) = \\alpha_z (1,2) - \\omega_z^2 (2,-1) \\\\   &   \\hat\\imath : -4 = 1 \\alpha_z -2 \\omega_z^2 \\\\   &   \\left(\\hat\\jmath : -3 = 2 \\alpha_z + \\omega_z^2 \\right) \\\\  \\end{aligned}" /> </li>
+             <li> Solve scalar equations (substitution): <DisplayEquation equation=" \\begin{aligned} \\hat\\jmath : \\omega_z^2 = -3 -2 \\alpha_z \\\\  &   \\hat\\imath : -4 = \\alpha_z - 2(-3-2\\alpha_z) \\\\   &   \\hat\\imath : -4 = 5 \\alpha_z +6 \\\\   &   \\alpha_z = -2 \\\\ & \\omega_z^2 = -3 -2 (-2) = 1 \\\\   &   \\omega_z = \\pm 1 \\\\ \\end{aligned}" /> </li>
+             <li> Reconstruct vector variables: <DisplayEquation equation=" \\begin{aligned} \\vec\\omega = \\pm \\hat{k}  rad/s  \\\\  &   \\vec\\alpha  = -2 \\hat{k} rad/s^2 \\\\    \\end{aligned}" /> </li>
           </ol>
             
         </div>
