--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -1,4 +1,6 @@
 ---
+import CalloutContainer from "../../components/CalloutContainer.astro"
+import CalloutCard from "../../components/CalloutCard.astro"
 import Layout from "../../layouts/Layout.astro" 
 import Image from "../../components/Image.astro" 
 import Section from "../../components/Section.astro" 
@@ -19,8 +21,9 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 <ul>
     <li>   <strong>Displacement of points in space:</strong>  the movement of a point relative to its initial position in space (ex;  <InlineEquation equation='\\delta_B' /> )</li>
      <li><strong>Change in length of a segment:</strong>  the relative displacement of a point with respect to another point (ex;  <InlineEquation equation='\\delta_{B/A} = \\delta_B - \\delta_A = \\delta_1' /> ). This can be written multiple ways:
-     <DisplayEquation equation='\\delta_{AD} \\equiv \\delta_{DA} \\equiv \\delta_{A/D} \\equiv \\delta_{D/A}\\' title="Notation" background="True"/></li>
+     <DisplayEquation equation='\\delta_{AD} \\equiv \\delta_{DA} \\equiv \\delta_{A/D} \\equiv \\delta_{D/A}\\' title="Notation." background="True"/></li>
 </ul>
+
 <strong>Sign Conventions for internal forces in a bar.</strong>
 <ul>
      <li><InlineEquation equation='F>0' /> : tension</li>
@@ -43,15 +46,14 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 <SubSection title="Force-Deformation Relation">
 
-<DisplayEquation equation='\\delta = \\frac{PL}{EA}\\' title="Relation" background="True" />
+<DisplayEquation equation='\\delta = \\frac{PL}{EA}\\' title="Relation." background="True" />
 
-<DisplayEquation equation='\\delta = fP   =>   f = \\frac{L}{EA}\\' title=" Axial flexibility" background="True" />
+<DisplayEquation equation='\\delta = fP   =>   f = \\frac{L}{EA}\\' title=" Axial flexibility." background="True" />
 
-<DisplayEquation equation='P = k\\delta   =>   k = \\frac{EA}{L}\\' title=" Axial stiffness" background="True" />
+<DisplayEquation equation='P = k\\delta   =>   k = \\frac{EA}{L}\\' title=" Axial stiffness." background="True" />
 
- <strong>*Expandable Derivation*</strong>
 
-<DisplayEquation equation='P = \\sigma A\\' title="Text above" id="sts-sss" background="True" derivation="True" >
+<DisplayEquation equation='P = \\sigma A\\' title="Text above." id="sts-sss" background="True" derivation="True" >
 
 	<DisplayEquation equation='\\sigma = E\\varepsilon\\' />
 	<DisplayEquation equation='\\varepsilon = \\delta / L\\' />
@@ -64,7 +66,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 <SubSection title="Axially Varying Properties"> 
 For non-uniform load, material property and cross-section area:
 
- <DisplayEquation equation='\\delta = \\int_0^L\\frac{F(x)}{E(x)A(x)}dx\\' title="Variable properties" id="sts-sss" background="True" derivation="True" >
+ <DisplayEquation equation='\\delta = \\int_0^L\\frac{F(x)}{E(x)A(x)}dx\\' title="Variable properties." id="sts-vpr" background="True" derivation="True" >
 
 	 <DisplayEquation equation='\\sigma = E\\varepsilon\\' /> 
 	 <DisplayEquation equation='\\frac{F(x)}{A(x)} = E(x)\\varepsilon(x)\\' /> 
@@ -81,7 +83,7 @@ For non-uniform load, material property and cross-section area:
 
 Superposition: If the displacements are (1) small and (2) linearly related to the force components acting, the displacements caused by the components can be added up:
 
-<DisplayEquation equation='\\delta = \\sum_i \\delta_i = \\sum_i \\frac{F_i L_i}{E_i A_i}\\' title="Superposition" background="True" />
+<DisplayEquation equation='\\delta = \\sum_i \\delta_i = \\sum_i \\frac{F_i L_i}{E_i A_i}\\' title="Superposition." background="True" />
 
 </SubSection>
 
@@ -130,8 +132,8 @@ All internal forces can be obtained from equilibrium analysis only
 
 <p>
     <InlineEquation equation='\\delta_T' /> ,  <InlineEquation equation='\\varepsilon_T' />  present in addition to elastic  <InlineEquation equation='\\delta_E' /> ,  <InlineEquation equation='\\varepsilon_E' />  (from internal forces). Superposition (small strains):
- <DisplayEquation equation='\\varepsilon_{tot} = \\varepsilon_{E} + \\varepsilon_{T}\\' title="Total strain" background="True" /> 
-  <DisplayEquation equation='\\delta_{tot} = \\delta_{E} + \\delta_{T}\\' title="Total displacement" background="True" /> 
+ <DisplayEquation equation='\\varepsilon_{tot} = \\varepsilon_{E} + \\varepsilon_{T}\\' title="Total strain." background="True" /> 
+  <DisplayEquation equation='\\delta_{tot} = \\delta_{E} + \\delta_{T}\\' title="Total displacement." background="True" /> 
 </p>
 
 <Image src='/Solid_Mechanics/Axial Loading-Figures/Temperature_NoLoad.png' width='4'>Temperature changes with no applied loads</Image>
@@ -150,12 +152,12 @@ All internal forces can be obtained from equilibrium analysis only
 
  Initially, rod of length <InlineEquation equation='L' /> is placed between two supports at a distance <InlineEquation equation='L' /> from each other. With no internal forces, there is no stress or strain.
 
-<DisplayEquation equation='R_{A} = R_{B} = 0\\' title="Force balance" background="True" />
-<DisplayEquation equation='R_{A} = F\\' title="Reaction force" background="True" />
+<DisplayEquation equation='R_{A} = R_{B} = 0\\' title="Force balance." background="True" />
+<DisplayEquation equation='R_{A} = F\\' title="Reaction force." background="True" />
                   
  After raising the temperature, the total elongation of the rod is still zero. The total elongation is given by:
 
-<DisplayEquation equation='\\delta = \\frac{FL}{EA} + \\alpha L \\Delta T = 0\\' title="Total elongation" background="True" />
+<DisplayEquation equation='\\delta = \\frac{FL}{EA} + \\alpha L \\Delta T = 0\\' title="Total elongation." background="True" />
 
  The stress in the rod due to change in temperature is given by:
 <DisplayEquation equation='\\sigma = -\\alpha E \\Delta T\\' title="Stress from temperature changes." background="True"  />
@@ -174,7 +176,7 @@ All internal forces can be obtained from equilibrium analysis only
 		</Image>
               <p>
                  The stress concentration factor is the highest at lowest cross-sectional area.
-		<DisplayEquation equation='K = \\frac{\\sigma_{max}}{\\sigma_{avg}}\\' title="Stress concentration factor" background="True" />
+		<DisplayEquation equation='K = \\frac{\\sigma_{max}}{\\sigma_{avg}}\\' title="Stress concentration factor." background="True" />
 		<ul>
 			<li>Found experimentally
 		    </li>
