Updated vectors scalars, modified section components

--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -234,6 +234,8 @@ Alternatively, the vector components can be determined geometrically via the ang
 
 <!-- There's a picture from the Overleaf document that needs to get inserted here - it's figure 7 in the 210 Overleaf File -->
 
+<Image src='/Statics/VectorsScalarsFigures/UnitVecAngles.jpg' width='6'></Image>
+
 </SubSection>
 
 <SubSection title="Scalar and Vector Products"></SubSection>
@@ -539,12 +541,14 @@ Alternatively, the vector components can be determined geometrically via the ang
 <SubSubSubSection title="Calculating the cross product">
 
 <p>
-    The cross products of 3D vectors can be calculated by taking the determinant of specific components of the two vectors. It's best to start by writing a 3x3 matrix with the  \\hat{\\imath}, \\hat{\\i=jmath}, and \\hat{\\kmath} vectors in the first row and the two vectors you are taking the cross product of in the next two rows. 
+    The cross products of 3D vectors can be calculated by taking the determinant of specific components of the two vectors. It's best to start by writing a 3x3 matrix with the <InlineEquation equation="\\hat{\\imath}" />, <InlineEquation equation="\\hat{\\jmath}" />, and <InlineEquation equation="\\hat{k}" /> vectors in the first row and the two vectors you are taking the cross product of in the next two rows. 
 
-    See the example below of the cross product between \\vec{A} and \\vec{B}: 
+    See the example below of the cross product between <InlineEquation equation="\\vec{A}" /> and <InlineEquation equation="\\vec{B}" />: 
 </p>
 
 <!-- There's a picture from the Overleaf document that needs to get inserted here - it's figure 8 in the 210 Overleaf File -->
+
+<Image src='/Statics/VectorsScalarsFigures/CrossProduct.jpg' width='6'></Image>
 
 </SubSubSubSection>
 
