Adding new section to Vecs/Scalars

--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -538,7 +538,7 @@ Alternatively, the vector components can be determined geometrically via the ang
 </DisplayEquation>
 </SubSubSubSection>
 
-<SubSubSubSection title="Calculating the cross product">
+<SubSubSubSection title="Calculating the cross product" id="calculating_the_cross_product">
 
 <p>
     The cross products of 3D vectors can be calculated by taking the determinant of specific components of the two vectors. It's best to start by writing a 3x3 matrix with the <InlineEquation equation="\\hat{\\imath}" />, <InlineEquation equation="\\hat{\\jmath}" />, and <InlineEquation equation="\\hat{k}" /> vectors in the first row and the two vectors you are taking the cross product of in the next two rows. 
