--- a/src/pages/sol/material_properties.astro
+++ b/src/pages/sol/material_properties.astro
@@ -24,9 +24,9 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
 
 
 <Layout title="Material Properties">
-<Section title="Material Properties"></Section>
+<Section title="Material Properties" id="material_properties"></Section>
 
-<SubSection title="Stress-Strain Diagram">
+<SubSection title="Stress-Strain Diagram" id="stress-strain_diagram">
 
 A <strong>stress-strain diagram</strong> is the relationship of normal stress as a function of normal strain. One way to collect these measurement is a <strong>uniaxial tension test</strong> in which a specimen at a very slow, constant rate (quasi-static). A load <InlineEquation equation="P" /> and distance <InlineEquation equation="L" /> are measured at frequent intervals.
 
@@ -38,7 +38,7 @@ Note that two stress-strain diagrams for a particular material will be similar, 
 
 <Image src='/Solid_Mechanics/Material Properties-Figures/Stress Strain Diagram.png' width='3'> Stress-strain diagram showing key properties</Image>
 </SubSection>
-<SubSubSection title="Elastic Behavior">
+<SubSubSection title="Elastic Behavior" id="elastic_behavior">
 Loading in this region results <strong>elastic behavior</strong>, meaning the material returns to its original shape when unloaded. This region of the diagram is mostly a straight line, limited by the proportional limit). This region ends at <InlineEquation equation="\\sigma_Y" /> (yielding). For <InlineEquation equation="\\sigma \\le \\sigma_{pl}" />, the diagram is linear, and the behavior is elastic. For <InlineEquation equation="\\sigma_{pl} < \\sigma < \\sigma_Y" />, the diagram is nonlinear, but the behavior is still elastic.
 
 
@@ -93,7 +93,7 @@ Loading in this region results <strong>elastic behavior</strong>, meaning the ma
 
 </SubSubSection>
 
-<SubSubSection title="Plastic Behavior">
+<SubSubSection title="Plastic Behavior" id="plastic_behavior">
 
 Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma" />) cause the material to permanently deform.
 
@@ -197,11 +197,9 @@ Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma"
 
 </SubSubSection>
 
-<SubSection title="Other Derived Properties"></SubSection>
-
-    
-
-<SubSubSection title="Directional Materials">
+<SubSection title="Other Derived Properties" id="other_derived_properties"></SubSection>
+  
+<SubSubSection title="Directional Materials" id="directional_materials">
 
 <Itemize>
     <Item><strong>Isotropic:</strong> material properties are independent of the direction</Item>
@@ -210,7 +208,7 @@ Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma"
 
 </SubSubSection>
 
-<SubSubSection title="Poisson's Ratio">
+<SubSubSection title="Poisson's Ratio" id="poissons_ratio">
 
 <Image src="/Solid_Mechanics/Material Properties-Figures/Poisson's Ratio.png" width='4'>Poisson's ratio</Image>
 
